[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/caida_procedural/player/fall_player.png" type="Texture" id=1]
[ext_resource path="res://src/caida_procedural/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://src/caida_procedural/scripts/player_animations.gd" type="Script" id=3]
[ext_resource path="res://src/caida_procedural/scripts/bullet_generator.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "hit",
"speed": 40.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 3.21397
height = 6.8453

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 3.25, 6.125 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 2.1875, 0.960946 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="PlayerAnimations" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "idle"
script = ExtResource( 3 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 14 )

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
modulate = Color( 0.980392, 0.054902, 0.00784314, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 15 )

[node name="StompDetector" type="Area2D" parent="." groups=[
"cosas_que_golpean",
]]
modulate = Color( 0.180392, 0.819608, 0.109804, 1 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, 7 )
shape = SubResource( 16 )
one_way_collision = true

[node name="BulletGenerator" type="Position2D" parent="."]
position = Vector2( 0, 5 )
script = ExtResource( 4 )
[connection signal="animation_finished" from="PlayerAnimations" to="PlayerAnimations" method="_on_PlayerAnimations_animation_finished"]
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="area_exited" from="StompDetector" to="." method="_on_StompDetector_area_exited"]
[connection signal="bullet_generated" from="BulletGenerator" to="." method="_on_BulletGenerator_bullet_generated"]
[connection signal="bullet_generated" from="BulletGenerator" to="PlayerAnimations" method="_on_BulletGenerator_bullet_generated"]
